[metadata]
name = unsuper-py
version = 0.0.1
author = Ellie Jones
author_email = ellie@altaml.com
description = A one stop shop for unsupervised insights, quickly.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/null-jones/unsuper-py
project_urls =
    Bug Tracker = https://github.com/null-jones/unsuper-py/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
